init_keytry.h isn't generated by default; fix that

--- a/libcurses/Makefile
+++ b/libcurses/Makefile
@@ -123,7 +123,7 @@ ncurses.pc: ../pc_gen
 
 build: libcurses
 
-libcurses: ${LIBSO} ${LIBA}
+libcurses: ${GENFILES} ${LIBSO} ${LIBA}
 
 ${LIBSO}: ${OBJS}
 	${CC} -shared -o $@ ${OBJS} -Wl,--soname="$@"
