--- a/mk.config
+++ b/mk.config
@@ -23,4 +23,5 @@ DATAROOTDIR 	= ${PREFIX}/share
 MANDIR 		= ${DATAROOTDIR}/man
 SYSCONFDIR 	= ${PREFIX}/etc
 
-CFLAGS 		?= -g -g1 -O3
+CFLAGS 		?= -O2
+LDFLAGS 	?=
